--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,4 @@
+/* Sets the background image for the whole page, prevents it from repeating, and ensures it covers the entire viewport */
 body {
   background-image: url('./assets/valley.jpeg');
   background-repeat: no-repeat;
@@ -7,21 +8,23 @@ body {
   margin: 0px;
 }
 
+/* Creates a background overlay with a gradient, centered both vertically and horizontally */
 .background {
   width: 100vw;
   height: 100vh;
   background: linear-gradient(75deg, rgb(20, 23, 33) 0%, rgb(20, 23, 33) 50%, rgba(20, 23, 33,0.8) 100%);
-  /* Vertical center */
   display: table-cell;
   vertical-align: middle;
 }
 
+/* Styling for the card that contains form elements, centered with max-width */
 .form-card {
   width: 50%;
   max-width: 350px;
   padding: 0% 25% 0% 25%;
 }
 
+/* Style definitions for the main title of the form */
 .form-title { 
   font-size: 42px; 
   font-family: 'Avenir'; 
@@ -31,6 +34,7 @@ body {
   padding-bottom: 12px; 
 }
 
+/* Style definitions for the subtitle of the form */
 .form-subtitle {
   font-size: 18px;
   font-family: 'Avenir';
@@ -39,12 +43,15 @@ body {
   padding-bottom: 24px;
 }
 
+/* Container for authentication input, with relative positioning for label overlay */
 .auth {
   position: relative;
   display: inline-block;
   width: 100%;
   padding-bottom: 12px;
 }
+
+/* Label for authentication inputs, absolutely positioned within the .auth container */
 .auth-label {
   position: absolute;
   top: 8px;
@@ -54,6 +61,8 @@ body {
   font-family: Avenir;
   width: 100px;
 }
+
+/* Style for the input fields inside the authentication form */
 .auth-input {
   background-color: #3e404b;
   color: white;
@@ -62,9 +71,11 @@ body {
   border: none;
   border-radius: 8px;
   padding: 24px 18px 12px 18px;
-  width: calc(100% - 18px - 18px);
+  width: calc(100% - 36px);
   margin-bottom: 12px;
 }
+
+/* Button styles for authentication actions */
 .auth-button {
   width: 100%;
   height: 53px;
@@ -76,11 +87,12 @@ body {
   font-family: "Avenir";
   cursor: pointer;
   transition: all .44s ease;
-  -webkit-transition: all .44s ease;
-  -moz-transition: all .44s ease;
 }
+
+/* Hover effect for the button, making it slightly brighter on hover */
 .auth-button:hover { filter: brightness(145%); }
 
+/* Wrapper for the chat interface, with defined height, width, and central margin */
 .chat-wrapper {
   height: 80vh; 
   width: 80%;
